Moved double border fix from vis.css to vis_timeline_theme.css

--- a/HTML_ADMIN/css/vis/vis_timeline_theme.css
+++ b/HTML_ADMIN/css/vis/vis_timeline_theme.css
@@ -26,3 +26,9 @@
     text-shadow: 0px 0px 3px #1A1A1A;      
     opacity: 0.3;
 }
+
+.vis.timeline .vispanel.center,
+.vis.timeline .vispanel.top,
+.vis.timeline .vispanel.bottom {
+  border-right-style: none;
+}
